Essentials and finaly forced SVG`s to change color
In SVG applied fill = "currentColor" instead of fill = "none" and fill = "randomColor", in CSS declared currentColor, in HTML assigned SVG to use currentColor

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="hero-section">
             <div class="container">
             <div class="hero-background"></div>
-                <h2 class="hero-title">A powerful online engagement tool that’s intuitive and simple to use.</h2>
+                <p class="hero-title">A powerful online engagement tool that’s intuitive and simple to use.</p>
                 <p class="text-description-smaller">With stellar one-click reports and unmatched support, see how Circle will make a difference in your business</p>
                 <button class="blue-button hero-button"><a>Get started free</a>
                     <svg class="button-arrow"><use href="assets/svg/button-arrow.svg#button-arrow"/></svg>
@@ -48,29 +48,29 @@
         <section class="customers-section">
             <div class="container">
                 <div class="section-title"><p>OUR CUSTOMERS</p></div>
-                <h2 class="lower-title">Trusted by 100,000+ customers in 90+ countries</h2>
+                <p class="lower-title">Trusted by <b>100,000+ customers</b> in 90+ countries</p>
 
                 <ul class="customers-logo-row">
-                    <li><img class="customers-logo" src="assets/Logo/companies/logo-capgemini.png" width="" height=""/></li>
-                    <li><img class="customers-logo" src="assets/Logo/companies/logo-yamaha.png" width="" height=""/></li>
-                    <li><img class="customers-logo" src="assets/Logo/companies/logo-biocon.png" width="" height=""/></li>
-                    <li><img class="customers-logo" src="assets/Logo/companies/logo-dell.png" width="" height=""/></li>
-                    <li><img class="customers-logo" src="assets/Logo/companies/logo-birla.png" width="" height=""/></li>
-                    <li><img class="customers-logo" src="assets/Logo/companies/logo-shell.png" width="" height=""/></li>
+                    <li class="customers-logo"><img src="assets/Logo/companies/logo-capgemini.png"/></li>
+                    <li class="customers-logo"><img src="assets/Logo/companies/logo-yamaha.png"/></li>
+                    <li class="customers-logo"><img src="assets/Logo/companies/logo-biocon.png"/></li>
+                    <li class="customers-logo"><img src="assets/Logo/companies/logo-dell.png"/></li>
+                    <li class="customers-logo"><img src="assets/Logo/companies/logo-birla.png"></li>
+                    <li class="customers-logo"><img src="assets/Logo/companies/logo-shell.png"/></li>
                 </ul>
 
                 <div class="customers-stats">
                     <div class="customers-stats-description">
                         <p><svg class="customers-checkmark"><use href="assets/svg/checkmark.svg#checkmark"/></svg>
-                            18281 signed up last month</p> <!--Highlight-->
+                            <b>18281</b> signed up last month</p> <!--Highlight-->
                     </div>
                     <div class="customers-stats-description">
                         <p><svg class="customers-checkmark"><use href="assets/svg/checkmark.svg#checkmark"/></svg>
-                            GDPR- & CCPA-ready</p> <!--Highlight-->
+                            <b>GDPR</b>- & <b>CCPA</b>-ready</p> <!--Highlight-->
                     </div>
                     <div class="customers-stats-description">
                         <p><svg class="customers-checkmark"><use href="assets/svg/checkmark.svg#checkmark"/></svg>
-                            Leader@G2 Summer</p> <!--Highlight-->
+                            <b>Leader@G2</b> Summer</p> <!--Highlight-->
                     </div>
                 </div>
 
@@ -78,14 +78,15 @@
         </section>
 
         <section class="promises-section">
-            <div class="container promises-container"> <!--Smaller container 248px from sides-->
+            <div class="container">
                 <div class="side-textbox">
                     <div class="section-title"><p>OUR PROMISE</p></div>
-                    <h2 class="lower-title">Tool built for people.</h2>
+                    <p class="lower-title side-lower-title">Tool&nbsp;<b> built for people.</b></p>
                     <div class="text-description"><p>Whether you want to edit your Google Docs, resolve Jira issues, or collaborate over Zoom.</p>
+                        <br/>
                         <p>Circle has 100+ integrations with tools you already use and love.</p>
                     </div>
-                    <button class="start-button">Get started free</button>
+                    <button class="start-button blue-button">Get started free</button>
                 </div>
                 <img class="promises-img" src="assets/Images/promises-img.png" width="" height=""/>
             </div>
@@ -94,14 +95,14 @@
         <section class="awards-section">
             <div class="container">
                 <div class="section-title"><p>AWARDS</p></div>
-                <h2 class="lower-title">An award winning platform, loved by customers.</h2>
+                <p class="lower-title">An <b>award winning</b> platform, <b>oved by customers.</b></p>
                 <div class="awards-cards-block">
-                    <div class="award-card"><img class="award-card-img" src="assets/Logo/awards/award1.png" height="100"/><p class="award-card-text">Market leader across 18 categories</p></div>
-                    <div class="award-card"><img class="award-card-img" src="assets/Logo/awards/award2.png" height="100"/><p class="award-card-text">Most loved SaaS tool in 2021</p></div>
-                    <div class="award-card"><img class="award-card-img" src="assets/Logo/awards/award3.png" height="100"/><p class="award-card-text">Category leader in 2022</p></div>
-                    <div class="award-card"><img class="award-card-img" src="assets/Logo/awards/award4.png" height="100"/><p class="award-card-text">Most recommended tool in 2021</p></div>
-                    <div class="award-card"><img class="award-card-img" src="assets/Logo/awards/award5.png" height="100"/><p class="award-card-text">Champion in survey tool 2022</p></div>
-                    <div class="award-card"><img class="award-card-img" src="assets/Logo/awards/award6.png" height="100"/><p class="award-card-text">Top performer spring 2021</p></div>
+                    <div class="award-card a1"><img class="award-card-img" src="assets/Logo/awards/award1.png" height="100"/><p class="award-card-text">Market leader across 18 categories</p></div>
+                    <div class="award-card a2"><img class="award-card-img" src="assets/Logo/awards/award2.png" height="100"/><p class="award-card-text">Most loved SaaS tool in 2021</p></div>
+                    <div class="award-card a3"><img class="award-card-img" src="assets/Logo/awards/award3.png" height="100"/><p class="award-card-text">Category leader in 2022</p></div>
+                    <div class="award-card a4"><img class="award-card-img" src="assets/Logo/awards/award4.png" height="100"/><p class="award-card-text">Most recommended tool in 2021</p></div>
+                    <div class="award-card a5"><img class="award-card-img" src="assets/Logo/awards/award5.png" height="100"/><p class="award-card-text">Champion in survey tool 2022</p></div>
+                    <div class="award-card a6"><img class="award-card-img" src="assets/Logo/awards/award6.png" height="100"/><p class="award-card-text">Top performer spring 2021</p></div>
                 </div>
             </div>
         </section>
@@ -109,18 +110,18 @@
         <section class="BfP-section">
             <div class="container">
                 <div class="section-title"><p>BUILT FOR PEOPLE</p></div>
-                <h2 class="lower-title">Easy for beginners. Powerful for experts.</h2>
+                <p class="lower-title"><b>Easy</b> for beginners. <b>Powerful</b> for experts.</p>
                 <ul class="BfP-slider">
-                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25"><use href="assets/svg/BfP-icon1.svg#BfP-icon1"/></svg>
+                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25" fill="currentColor"><use href="assets/svg/BfP-icon1.svg#BfP-icon1"/></svg>
                         Create
                     </li>
-                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25"><use href="assets/svg/BfP-icon2.svg#BfP-icon2"/></svg>
+                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25" fill = "currentColor"><use href="assets/svg/BfP-icon2.svg#BfP-icon2"/></svg>
                         Distribute
                     </li>
-                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25"><use href="assets/svg/BfP-icon3.svg#BfP-icon3"/></svg>
+                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25" fill = "currentColor"><use href="assets/svg/BfP-icon3.svg#BfP-icon3"/></svg>
                         Collect
                     </li>
-                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25"><use href="assets/svg/BfP-icon4.svg#BfP-icon4"/></svg>
+                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25" fill = "currentColor"><use href="assets/svg/BfP-icon4.svg#BfP-icon4"/></svg>
                         Analyze
                     </li>
                 </ul>
@@ -129,10 +130,11 @@
                         <div class="BfP-display-block">
                             <h1 class="BfP-display-block-title">Create</h1>
                             <p class="BfP-display-block-subtitle">Advanced  research software</p>
-                            <p class="text-description">
-                                Ask the right questions and get the answers you need with the most secure and collaborative survey platform on the market 
-                                featuring powerful logic, sophisticated analytics, and built-in automation and integration.
-                            </p>
+                            <div class="text-description">
+                                <p>Ask the right questions and get the answers you need with the most secure and collaborative survey platform on the market 
+                                    featuring powerful logic, sophisticated analytics, and built-in automation and integration.
+                                </p>
+                            </div>
                             <button class="start-button">Get started for free</button>
                         </div>
                         <img class="BfP-display-block" src="assets/Images/BfP-img.png"/>
@@ -145,7 +147,7 @@
             <div class="container testemonials-container-slider"> <!--Smaller container 248px from sides-->
                 <div class="side-textbox">
                     <div class="section-title"><p>TESTEMONIALS</p></div>
-                    <h2 class="lower-title">See how customers drive impact</h2>
+                    <p class="lower-title">See how customers drive impact</p>
                     <button class="smaller-button">See case studies</button>
                 </div>
                 <div class="testemonials-video">
@@ -173,7 +175,7 @@
         <section class="solution-section">
             <div class="container"> <!--Smaller container 248px from sides-->
                 <div class="side-textbox">
-                    <h2 class="lower-title">Looking for a solution for your business?</h2> <!--Bald-->
+                    <p class="lower-title">Looking for a solution for your business?</p> <!--Bald-->
                     <p class="text-description">Check out Sogolytics enterprise feedback and experience management platform.</p>
                     <button class="smaller-button">Learn more</button><button class="smaller-button button-white">Schedule a consultation</button>
                 </div>
@@ -184,7 +186,7 @@
         <section class="resources-section">
             <div class="container">
                 <div class="section-title"><p>RESOURCES</p></div>
-                <h2 class="lower-title">Stay in the know</h2>
+                <p class="lower-title">Stay in the know</p>
                 
                 <div class="resources-cards">
                     <div class="resources-card">
