6/10 sections done (without adaptive))

--- a/index.html
+++ b/index.html
@@ -121,24 +121,22 @@
                     <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25" fill = "currentColor"><use href="assets/svg/BfP-icon3.svg#BfP-icon3"/></svg>
                         Collect
                     </li>
-                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25" fill = "currentColor"><use href="assets/svg/BfP-icon4.svg#BfP-icon4"/></svg>
+                    <li class="BfP-slider-button"><p><svg class="BfP-slider-icon" width="25" height="25" fill = "currentColor"><use href="assets/svg/BfP-icon4.svg#BfP-icon4"/></svg>
                         Analyze
-                    </li>
+                    </li></p>
                 </ul>
                 <div class="BfP-display-container">
-                    <div class="BfP-display">
-                        <div class="BfP-display-block">
-                            <h1 class="BfP-display-block-title">Create</h1>
-                            <p class="BfP-display-block-subtitle">Advanced  research software</p>
-                            <div class="text-description">
-                                <p>Ask the right questions and get the answers you need with the most secure and collaborative survey platform on the market 
-                                    featuring powerful logic, sophisticated analytics, and built-in automation and integration.
-                                </p>
-                            </div>
-                            <button class="start-button">Get started for free</button>
+                    <div class="BfP-display-block">
+                        <p class="BfP-display-block-title">Create</p>
+                        <p class="BfP-display-block-subtitle">Advanced  research software</p>
+                        <div class="text-description">
+                            <p>Ask the right questions and get the answers you need with the most secure and collaborative survey platform on the market 
+                                featuring powerful logic, sophisticated analytics, and built-in automation and integration.
+                            </p>
                         </div>
-                        <img class="BfP-display-block" src="assets/Images/BfP-img.png"/>
+                        <button class="start-button blue-button">Get started for free</button>
                     </div>
+                    <div class="BfP-display-block"><img src="assets/Images/BfP-img.png"/></div>
                 </div>
             </div>
         </section>
