Finished for 1440px width screen
Adaptive WIP

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li class="header-nav-item" id="nav"><a href="">Company</a></li>
                     <li class="header-nav-item" id="nav"><a href="">Contact</a></li>
-                    <button class="header-nav-button" id="nav"><a href="">Login</a></li>
+                    <button class="header-nav-button white-button id="nav">Login</li>
                 </ul>
             </nav>
         </header>
@@ -38,7 +38,7 @@
             <div class="hero-background"></div>
                 <p class="hero-title">A powerful online engagement tool that’s intuitive and simple to use.</p>
                 <p class="text-description-smaller">With stellar one-click reports and unmatched support, see how Circle will make a difference in your business</p>
-                <button class="blue-button hero-button"><a>Get started free</a>
+                <button class="blue-button hero-button">Get started free
                     <svg class="button-arrow"><use href="assets/svg/button-arrow.svg#button-arrow"/></svg>
                 </button>
                 <img class="hero-image" src="assets/Images/Hero-img.png" width="" height=""/>
@@ -142,40 +142,41 @@
         </section>
 
         <section class="testemonials-section">
-            <div class="container testemonials-container-slider"> <!--Smaller container 248px from sides-->
+            <div class="container">
                 <div class="side-textbox">
                     <div class="section-title"><p>TESTEMONIALS</p></div>
-                    <p class="lower-title">See how customers drive impact</p>
-                    <button class="smaller-button">See case studies</button>
+                    <p class="lower-title">See how customers <b>drive impact</b></p>
+                    <button class="smaller-button blue-button">See case studies</button>
                 </div>
                 <div class="testemonials-video">
                     <img class="testemonials-img" src="assets/Images/testemonials-img.png"/>
                     <svg class="testemonials-playbutton"><use href="assets/svg/playbutton.svg#playbutton"></use></svg>
                 </div>
                 <div class="testemonials-description-block">
-                    <img class="testemonials-description-block-item testemonials-description-logo" src=""/>
-                    <div class="testemonials-description-block-item"><p class="text-description">
+                    <img class="testemonials-description-logo" src="assets/Logo/paypal-logo.png"/>
+                    <p class="text-description">
                         "I used to have a bunch of different tools I had to pay for, with Circle you get everything in one bundle."
-                        </p>
-                    </div>
-                    <div class="testemonials-description-block-item testemonials-description-credit">
-                        <p>Michel Dedrick</p> <!--Bald-->
+                    </p>
+                    <div class="testemonials-description-credit">
+                        <b>Michel Dedrick</b>
                         <p>Senior Conversion Optimizer</p>
                     </div>
                 </div>
                 <div class="testemonials-slider-buttons">
-                    <img class="testemonials-button button-right" src=""/>
-                    <img class="testemonials-button button-left" src=""/>
+                    <svg class="testemonials-button"><use href="assets/svg/testemonials-button-off.svg#testemonials-button-off"/></svg>
+                    <svg class="testemonials-button"><use href="assets/svg/testemonials-button-on.svg#testemonials-button-on"/></svg>
                 </div>
             </div>
         </section>
 
         <section class="solution-section">
-            <div class="container"> <!--Smaller container 248px from sides-->
+            <div class="container">
                 <div class="side-textbox">
-                    <p class="lower-title">Looking for a solution for your business?</p> <!--Bald-->
+                    <p class="lower-title">Looking for a <b>solution</b> for your business?</p> <!--Bald-->
                     <p class="text-description">Check out Sogolytics enterprise feedback and experience management platform.</p>
-                    <button class="smaller-button">Learn more</button><button class="smaller-button button-white">Schedule a consultation</button>
+                    <div class="solution-buttons"><button class="smaller-button blue-button">Learn more</button>
+                        <button class="smaller-button white-button">Schedule a consultation</button>
+                    </div>
                 </div>
                 <img class="solution-img" src="assets/Images/solutions-img.png"/>
             </div>
@@ -184,37 +185,43 @@
         <section class="resources-section">
             <div class="container">
                 <div class="section-title"><p>RESOURCES</p></div>
-                <p class="lower-title">Stay in the know</p>
+                <p class="lower-title"><b>Stay</b> in the <b>know</b></p>
                 
                 <div class="resources-cards">
                     <div class="resources-card">
                         <img class="resources-card-img" src="assets/Images/cards/recources-card1.png"/>
                         <p class="resources-card-title">Excepteur sint occaecat cupidatat non proident</p>
-                        <p class="text-description-smaller">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
-                            sed quia consequuntur magni dolores eosNeque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
-                            consectetur, adipisci veli
-                        </p>
-                        <button class="smaller-button">Read more</button>
+                        <div class="text-description-smaller"><p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+                            sed quia consequuntur magni dolores eos</p>
+                            <br/>
+                            <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
+                            consectetur, adipisci veli</p>
+                        </div>
+                        <button class="smaller-button blue-button">Read more</button>
                     </div>
 
                     <div class="resources-card">
                         <img class="resources-card-img" src="assets/Images/cards/recources-card2.png"/>
                         <p class="resources-card-title">Quis nostrum exercitationem ullam corporis suscipit laboriosam</p>
-                        <p class="text-description-smaller">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis 
-                            suscipit laboriosam. nisi ut aliquid ex ea commodi consequatur autem vel eum iure reprehenderit
-                        </p>
-                        <button class="smaller-button">Read more</button>
+                        <div class="text-description-smaller"><p>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis 
+                            suscipit laboriosam.</p> 
+                            <br/>
+                            <p>nisi ut aliquid ex ea commodi consequatur autem vel eum iure reprehenderit</p>
+                        </div>
+                        <button class="smaller-button blue-button">Read more</button>
                     </div>
 
                     <div class="resources-card">
                         <img class="resources-card-img" src="assets/Images/cards/recources-card3.png"/>
                         <p class="resources-card-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <p class="text-description-smaller">Coluptatem accusantium doloremque laudantium, totam rem aperiam 
-                            Aaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-                        </p>
-                        <button class="smaller-button">Read more</button>
+                        <div class="text-description-smaller"><p>Coluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+                            <br/> 
+                            <p>Aaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                        </div>
+                        <button class="smaller-button blue-button">Read more</button>
                     </div>
                 </div>
+                <div class="resources-background"></div>
             </div>
         </section>
 
@@ -227,38 +234,38 @@
                     </div>
                     <div class="footer-columns">
                         <div class="footer-column">
-                            <h1 class="footer-column-title">Products</h1>
-                            <p class="footer-column-item">Delta</p>
-                            <p class="footer-column-item">Sigma</p>
-                            <p class="footer-column-item">Zeta</p>
-                            <p class="footer-column-item">Alpha</p>
-                            <p class="footer-column-item">Acumen</p>
+                            <p class="footer-column-title">Products</p>
+                            <a class="footer-column-item" href="">Delta</a>
+                            <a class="footer-column-item" href="">Sigma</a>
+                            <a class="footer-column-item" href="">Zeta</a>
+                            <a class="footer-column-item" href="">Alpha</a>
+                            <a class="footer-column-item" href="">Acumen</a>
                         </div>
                         <div class="footer-column">
-                            <h1 class="footer-column-title">Resources</h1>
-                            <p class="footer-column-item">Help</p>
-                            <p class="footer-column-item">Training Videos</p>
-                            <p class="footer-column-item">Webinars</p>
-                            <p class="footer-column-item">Request a Demo</p>
-                            <p class="footer-column-item">Create Surveys</p>
-                            <p class="footer-column-item">Quiz Maker</p>
+                            <p class="footer-column-title">Resources</p>
+                            <a class="footer-column-item" href="">Help</a>
+                            <a class="footer-column-item" href="">Training Videos</a>
+                            <a class="footer-column-item" href="">Webinars</a>
+                            <a class="footer-column-item" href="">Request a Demo</a>
+                            <a class="footer-column-item" href="">Create Surveys</a>
+                            <a class="footer-column-item" href="">Quiz Maker</a>
                         </div>
                         <div class="footer-column">
-                            <h1 class="footer-column-title">Company</h1>
-                            <p class="footer-column-item">About Us</p>
-                            <p class="footer-column-item">Careers</p>
-                            <p class="footer-column-item">Team</p>
-                            <p class="footer-column-item">Contact Us</p>
+                            <p class="footer-column-title">Company</p>
+                            <a class="footer-column-item" href="">About Us</a>
+                            <a class="footer-column-item" href="">Careers</a>
+                            <a class="footer-column-item" href="">Team</a>
+                            <a class="footer-column-item" href="">Contact Us</a>
                         </div>
                     </div>
                 </div>
                 <div class="footer-basement">
-                    <p class="footer-basement-text footer-basement-rigth">Copyright 2022 Circle. All rights reserved.</p>
+                    <p class="footer-basement-text">Copyright 2022 Circle. All rights reserved.</p>
                     <div class="footer-basement-socials">
-                        <img class="footer-basement-social" src=""/>
-                        <img class="footer-basement-social" src=""/>
+                        <img class="footer-basement-social" src="assets/Logo/linkedin.png"/>
+                        <img class="footer-basement-social" src="assets/Logo/twitter.png"/>
                     </div>
-                    <p class="footer-basement-text footer-basement-left">Privacy Policy | Data & Security | Terms of Service | Data & Security</p>
+                    <p class="footer-basement-text">Privacy Policy | Data & Security | Terms of Service | Data & Security</p>
                 </div>
             </div>
         </footer>
