Almost done adaptive
Adjusted every section that needed to be fixed in lower screen width. Support up to 380px screen width

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                     <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25" fill = "currentColor"><use href="assets/svg/BfP-icon3.svg#BfP-icon3"/></svg>
                         Collect
                     </li>
-                    <li class="BfP-slider-button"><p><svg class="BfP-slider-icon" width="25" height="25" fill = "currentColor"><use href="assets/svg/BfP-icon4.svg#BfP-icon4"/></svg>
+                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25" fill = "currentColor"><use href="assets/svg/BfP-icon4.svg#BfP-icon4"/></svg>
                         Analyze
-                    </li></p>
+                    </li>
                 </ul>
                 <div class="BfP-display-container">
                     <div class="BfP-display-block">
